# Project_2

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: vacancies.json
htmlcov/: class_index.html  function_index.html  index.html  main_py.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_api_handler_py.html  z_145eef247bfb46b6_file_handler_py.html  z_145eef247bfb46b6_helpers_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_vacancy_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_api_handler_py.html  z_a44f0ac069e85531_test_file_handler_py.html  z_a44f0ac069e85531_test_helpers_py.html  z_a44f0ac069e85531_test_main_py.html  z_a44f0ac069e85531_test_utils_py.html  z_a44f0ac069e85531_test_vacancy_py.html
src/: api_handler.py  file_handler.py  helpers.py  utils.py  vacancy.py
tests/: test_api_handler.py  test_file_handler.py  test_helpers.py  test_main.py  test_utils.py  test_vacancy.py
tests/data/: vacancies.json
