[tool.poetry]
name = "Project_2"
version = "0.1.0"
description = "Поиск вакансий"
authors = ["valerii volynchikov <avto162@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
poetry-core = "^1.9.1"
requests = "^2.32.3"
#python-dotenv = "^1.0.1"
#pandas = "^2.2.3"
pytest = "8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
